[tool.poetry]
name = "pn"
version = "0.1.0"
description = "pxeger's notes system"
license = "Artistic License 2.0"
authors = ["Patrick Reader <_@pxeger.com>"]

[tool.poetry.dependencies]
python = "^3.10"
starlette = "^0.19.0"
Jinja2 = "^3.1.1"
python-multipart = "^0.0.5"
wsproto = "^1.1.0"

[tool.poetry.dev-dependencies]
uvicorn = "^0.17.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
